--- a/FindMyDrink/res/layout/dashboard.xml
+++ b/FindMyDrink/res/layout/dashboard.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_root"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    tools:context=".DashBoardLayout">
         <!-- Include Action Bar -->
         <!-- <include layout="@layout/actionbar_layout"/> -->
          
@@ -97,6 +99,5 @@
         </LinearLayout>
     </LinearLayout>
 
-      
-      <ViewStub />
+
 </LinearLayout>
