--- a/FindMyDrink/res/layout/dashboard.xml
+++ b/FindMyDrink/res/layout/dashboard.xml
@@ -42,14 +42,14 @@
             android:orientation="horizontal" >
  
             <Button
-                android:id="@+id/main_btn_eclair"
+                android:id="@+id/btn_addDrink"
                 style="@style/HomeButton"
                 android:drawableTop="@drawable/adddrink"
                 android:onClick="onButtonClicker"
                 android:text="@string/adddrink" />
  
             <Button
-                android:id="@+id/main_btn_froyo"
+                android:id="@+id/btn_search"
                 style="@style/HomeButton"
                 android:drawableTop="@drawable/search"
                 android:onClick="onButtonClicker"
@@ -63,14 +63,14 @@
             android:orientation="horizontal" >
  
             <Button
-                android:id="@+id/main_btn_gingerbread"
+                android:id="@+id/btn_blog"
                 style="@style/HomeButton"
                 android:drawableTop="@drawable/blog"
                 android:onClick="onButtonClicker"
                 android:text="@string/blog" />
  
             <Button
-                android:id="@+id/main_btn_honeycomb"
+                android:id="@+id/btn_events"
                 style="@style/HomeButton"
                 android:drawableTop="@drawable/events"
                 android:onClick="onButtonClicker"
@@ -84,14 +84,14 @@
             android:orientation="horizontal" >
  
             <Button
-                android:id="@+id/main_btn_ics"
+                android:id="@+id/btn_inviteFriends"
                 style="@style/HomeButton"
                 android:drawableTop="@drawable/invitefriends"
                 android:onClick="onButtonClicker"
                 android:text="@string/invite_friends" />
  
             <Button
-                android:id="@+id/main_btn_jellybean"
+                android:id="@+id/btn_checkin"
                 style="@style/HomeButton"
                 android:drawableTop="@drawable/checkin"
                 android:onClick="onButtonClicker"
